added code coverage profile to reactor build