@@ -45,5 +45,56 @@
 				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 			</properties> 
 		</profile>
+		<profile>
+			<id>codeCoverage</id>
+			<properties>
+				<jacoco.version>0.5.6.201201232323</jacoco.version>
+
+				<jacoco.propertyName>coverageAgent</jacoco.propertyName>
+				<jacoco.destFile>../../../releng/de.abg.jreichert.eclipsetestingtools.parent/target/jacoco.exec</jacoco.destFile>
+				<jacoco.append>true</jacoco.append>
+				<jacoco.includes>de.abg.jreichert.*</jacoco.includes>
+				<!--jacoco.excludes>java.*</jacoco.excludes-->
+				<!--jacoco.exclClassLoaders>sun.reflect.DelegatingClassLoader:MyClassLoader</jacoco.exclClassLoaders-->
+				<!--jacoco.sessionId>junit4runnerSession</jacoco.sessionId-->
+				<!--jacoco.dumpOnExit>true</jacoco.dumpOnExit-->
+				<!--jacoco.output>file</jacoco.output-->
+				<!--jacoco.address>localhost</jacoco.address-->
+				<!--jacoco.port>9999</jacoco.port-->
+
+				<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+				<sonar.jacoco.reportPath>${jacoco.destFile}</sonar.jacoco.reportPath>
+				<sonar.jacoco.itReportPath>${jacoco.destFile}</sonar.jacoco.itReportPath>
+			</properties> 
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-surefire-plugin</artifactId>
+						<version>${tycho-version}</version>
+						<configuration>
+							<argLine>${coverageAgent} -Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+							<useUIHarness>false</useUIHarness>
+							<includes>
+								<include>**/*Test.java</include>
+							</includes>
+							<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>${jacoco.version}</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>						
 	</profiles>
 </project>
